# reading_go_puzzle

./: .gitignore  README.md  UPCOMING.md  config.py  download_gogameguru.py  flask_app.py  manage_problems.py  pyproject.toml  run.py
adhoc/: add_passes_to_kifu.py  download_gogameguru.py  katago_score_one.py  manage_problems.py  validate_coordinates.py
app/: challenge.py  db.py  flask_app.py  logger.py  models.py  problem.py  routes.py  user.py
reading_go_puzzle/: challenge_manager.py
static/: styles.css
templates/: about.html  about_text.html  dashboard.html  footer.html  login.html  nav.html  privacy.html  problem.html  tos.html
